--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <aside id="profile-rail" class="profile-rail" data-animate></aside>
       <main id="page">
         <section id="gallery" class="section media-slider" data-animate></section>
-        <section id="aboutMe" class="section shell about-me-box" data-animate></section>
+        <section id="aboutMe" class="section about-me-box" data-animate></section>
         <section id="highlights" class="section highlights-section" data-animate></section>
         <section id="skills" class="section shell" data-animate></section>
         <section id="projects" class="section shell" data-animate></section>
