--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
     <div class="bg-glow bg-glow--one"></div>
     <div class="bg-glow bg-glow--two"></div>
     <header class="site-header" data-animate>
-      <div class="brand-mark">
-        <img src="/assets/images/logo.jpg" alt="AR Logo" class="brand-mark__logo" />
-        <strong class="brand-mark__name">Ali Rabiee</strong>
-      </div>
-      <nav class="site-nav" aria-label="Primary">
-        <button type="button" class="site-nav__toggle" aria-label="Toggle navigation">
-          <span></span><span></span><span></span>
-        </button>
-        <div class="site-nav__links">
-          <button type="button" data-scroll="about">About</button>
-          <button type="button" data-scroll="skills">Focus</button>
-          <button type="button" data-scroll="publications">Publications</button>
-          <button type="button" data-scroll="projects">Projects</button>
-          <button type="button" data-scroll="news">News</button>
-          <button type="button" data-scroll="honors">Honors</button>
-          <button type="button" data-scroll="contact">Contact</button>
+      <div class="header-inner">
+        <div class="brand-mark">
+          <img src="/assets/images/logo.jpg" alt="AR Logo" class="brand-mark__logo" />
+          <strong class="brand-mark__name">Ali Rabiee</strong>
         </div>
-      </nav>
-      <a class="ghost-link" href="mailto:ali.rabiee@uri.edu">Let’s collaborate</a>
+        <nav class="site-nav" aria-label="Primary">
+          <button type="button" class="site-nav__toggle" aria-label="Toggle navigation">
+            <span></span><span></span><span></span>
+          </button>
+          <div class="site-nav__links">
+            <button type="button" data-scroll="about">About</button>
+            <button type="button" data-scroll="skills">Focus</button>
+            <button type="button" data-scroll="publications">Publications</button>
+            <button type="button" data-scroll="projects">Projects</button>
+            <button type="button" data-scroll="news">News</button>
+            <button type="button" data-scroll="honors">Honors</button>
+            <button type="button" data-scroll="contact">Contact</button>
+          </div>
+        </nav>
+        <div class="header-actions">
+          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
+            <svg class="theme-icon theme-icon-light" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+              <path d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96a.996.996 0 0 0 0-1.41.996.996 0 0 0-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36a.996.996 0 0 0 0 1.41.996.996 0 0 0 1.41 0l1.06-1.06c.39-.39.39-1.03 0-1.41s-1.03-.39-1.41 0l-1.06 1.06z"/>
+            </svg>
+            <svg class="theme-icon theme-icon-dark" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+              <path d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-2.98 0-5.4-2.42-5.4-5.4 0-1.81.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1z"/>
+            </svg>
+          </button>
+          <a class="ghost-link" href="mailto:ali.rabiee@uri.edu">Let’s collaborate</a>
+        </div>
+      </div>
     </header>
 
     <div class="page-layout">
