--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span></span><span></span><span></span>
           </button>
           <div class="site-nav__links">
-            <button type="button" data-scroll="about">About</button>
+            <button type="button" data-scroll="aboutMe">About</button>
             <button type="button" data-scroll="skills">Focus</button>
             <button type="button" data-scroll="publications">Publications</button>
             <button type="button" data-scroll="projects">Projects</button>
@@ -51,8 +51,8 @@
     <div class="page-layout">
       <aside id="profile-rail" class="profile-rail" data-animate></aside>
       <main id="page">
-        <section id="gallery" class="section media-slider" data-animate></section>
-        <section id="aboutMe" class="section about-me-box" data-animate></section>
+        <section id="gallery" class="section media-slider"></section>
+        <section id="aboutMe" class="section about-me-box"></section>
         <section id="highlights" class="section highlights-section" data-animate></section>
         <section id="skills" class="section shell" data-animate></section>
         <section id="publications" class="section shell" data-animate></section>
