--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section id="highlights" class="section highlights-section" data-animate></section>
         <section id="skills" class="section shell" data-animate></section>
         <section id="publications" class="section shell" data-animate></section>
-        <section id="projects" class="section shell" data-animate></section>
+        <section id="projects" class="section shell"></section>
         <section id="news" class="section shell" data-animate></section>
         <section id="honors" class="section shell" data-animate></section>
         <section id="contact" class="section shell" data-animate></section>
