--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button type="button" data-scroll="skills">Focus</button>
             <button type="button" data-scroll="publications">Publications</button>
             <button type="button" data-scroll="projects">Projects</button>
-            <button type="button" data-scroll="news">News</button>
+            <!-- <button type="button" data-scroll="news">News</button> -->
             <button type="button" data-scroll="honors">Honors</button>
             <button type="button" data-scroll="contact">Contact</button>
           </div>
@@ -57,7 +57,7 @@
         <section id="skills" class="section shell" data-animate></section>
         <section id="publications" class="section shell" data-animate></section>
         <section id="projects" class="section shell"></section>
-        <section id="news" class="section shell" data-animate></section>
+        <!-- <section id="news" class="section shell" data-animate></section> -->
         <section id="honors" class="section shell" data-animate></section>
         <section id="contact" class="section shell" data-animate></section>
       </main>
