scroll icon added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
       <p>Built with curiosity in Kingston, RI • <span id="year"></span></p>
     </footer>
 
+    <button type="button" class="back-to-top" aria-label="Back to top">
+      <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true">
+        <path fill="currentColor" d="M12 4l7 7-1.41 1.41L13 7.83V20h-2V7.83L6.41 12.41 5 11l7-7z"/>
+      </svg>
+    </button>
+
     <noscript>
       <div class="noscript">
         <p>This site uses a lightweight script to populate content. Please enable JavaScript to view the experience.</p>
