--- a/index.html
+++ b/index.html
@@ -5,6 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Ali Rabiee · Ph.D. candidate building human-centered autonomy, BCIs, and intelligent robotic systems." />
     <title>Ali Rabiee · Intelligent Robotics & Shared Autonomy</title>
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="https://ali-rabiee.com/" />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/assets/images/logo.jpg" type="image/jpeg" />
+    <link rel="apple-touch-icon" href="/assets/images/logo.jpg" />
+
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Ali Rabiee" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ali Rabiee · Intelligent Robotics & Shared Autonomy" />
+    <meta property="og:description" content="Ali Rabiee · Ph.D. candidate building human-centered autonomy, BCIs, and intelligent robotic systems." />
+    <meta property="og:url" content="https://ali-rabiee.com/" />
+    <meta property="og:image" content="https://ali-rabiee.com/assets/images/my-photo.jpg" />
+
+    <!-- Twitter/X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ali Rabiee · Intelligent Robotics & Shared Autonomy" />
+    <meta name="twitter:description" content="Ali Rabiee · Ph.D. candidate building human-centered autonomy, BCIs, and intelligent robotic systems." />
+    <meta name="twitter:image" content="https://ali-rabiee.com/assets/images/my-photo.jpg" />
+
+    <meta name="theme-color" content="#050710" />
+
+    <!-- Structured data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Ali Rabiee",
+        "url": "https://ali-rabiee.com/",
+        "image": "https://ali-rabiee.com/assets/images/my-photo.jpg",
+        "jobTitle": "Ph.D. Candidate (Machine Learning & Robotics)",
+        "affiliation": { "@type": "Organization", "name": "University of Rhode Island" },
+        "sameAs": [
+          "https://www.linkedin.com/in/alirabiee97/",
+          "https://github.com/ali-rabiee",
+          "https://x.com/alirabieeai",
+          "https://scholar.google.com/citations?user=FoWitbgAAAAJ&hl=en"
+        ]
+      }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
